@@ -37,7 +37,7 @@ public class CommunicationChannelCodeTest extends CodeAdapterTest {
             var agreement = trade.getApplicableHeaderTradeAgreement();
             var seller = agreement.getSellerTradeParty();
             var communications = seller.getURIUniversalCommunication();
-            var communication = communications.get(0);
+            var communication = communications.getFirst();
             communication.setChannelCode(WRONG_CODE);
         });
     }
@@ -53,7 +53,7 @@ public class CommunicationChannelCodeTest extends CodeAdapterTest {
         final List<UniversalCommunicationType> communications = seller.getURIUniversalCommunication();
         assertNotNull(communications);
         assertEquals(1, communications.size());
-        final UniversalCommunicationType communication = communications.get(0);
+        final UniversalCommunicationType communication = communications.getFirst();
         assertNotNull(communication);
         final CommunicationChannelCodeType code = communication.getChannelCode();
         assertNotNull(code);
@@ -72,7 +72,7 @@ public class CommunicationChannelCodeTest extends CodeAdapterTest {
         assertNotNull(errors);
         assertEquals(1, errors.size());
         {
-            final IValidationError error = errors.get(0);
+            final IValidationError error = errors.getFirst();
             assertEquals(SeverityType.ERROR, error.getSeverity());
             assertEquals(122, error.getLineNumber());
             assertEquals(59, error.getColumnNumber());
