@@ -63,7 +63,7 @@ public class DeliveryTermsCodeTest extends CodeAdapterTest {
         assertNotNull(errors);
         assertEquals(1, errors.size());
         {
-            final IValidationError error = errors.get(0);
+            final IValidationError error = errors.getFirst();
             assertEquals(SeverityType.ERROR, error.getSeverity());
             assertEquals(160, error.getLineNumber());
             assertEquals(65, error.getColumnNumber());
