@@ -46,7 +46,7 @@ public class InvoiceValidatorTest {
         final File xmlFile = loadResource("xml/empty.xml");
         List<? extends IValidationError> errors = validator.validate(xmlFile);
         assertEquals(1, errors.size());
-        final IValidationError error = errors.get(0);
+        final IValidationError error = errors.getFirst();
         assertEquals(SeverityType.FATAL, error.getSeverity());
         assertEquals(1, error.getLineNumber());
         assertEquals(1, error.getColumnNumber());
@@ -60,7 +60,7 @@ public class InvoiceValidatorTest {
         List<? extends IValidationError> errors = validator.validate(xmlFile);
         assertEquals(1, errors.size());
         {
-            final IValidationError error = errors.get(0);
+            final IValidationError error = errors.getFirst();
             assertEquals(SeverityType.FATAL, error.getSeverity());
             assertEquals(5, error.getLineNumber());
             assertEquals(22, error.getColumnNumber());
@@ -75,7 +75,7 @@ public class InvoiceValidatorTest {
         List<? extends IValidationError> errors = validator.validate(xmlFile);
         assertEquals(1, errors.size());
         {
-            final IValidationError error = errors.get(0);
+            final IValidationError error = errors.getFirst();
             assertEquals(SeverityType.FATAL, error.getSeverity());
             assertEquals(5, error.getLineNumber());
             assertEquals(21, error.getColumnNumber());
@@ -90,7 +90,7 @@ public class InvoiceValidatorTest {
         List<? extends IValidationError> errors = validator.validate(xmlFile);
         assertEquals(8, errors.size());
         {
-            final IValidationError error = errors.get(0);
+            final IValidationError error = errors.getFirst();
             assertEquals(SeverityType.ERROR, error.getSeverity());
             assertEquals(61, error.getLineNumber());
             assertEquals(54, error.getColumnNumber());
