@@ -40,7 +40,7 @@ public class InvoiceValidatorTest {
         final File xmlFile = loadResource("xml/empty.xml");
         List<? extends IValidationError> errors = VALIDATOR.validate(xmlFile);
         assertEquals(1, errors.size());
-        final IValidationError error = errors.get(0);
+        final IValidationError error = errors.getFirst();
         assertEquals(SeverityType.FATAL, error.getSeverity());
         assertEquals(1, error.getLineNumber());
         assertEquals(1, error.getColumnNumber());
@@ -54,7 +54,7 @@ public class InvoiceValidatorTest {
         List<? extends IValidationError> errors = VALIDATOR.validate(xmlFile);
         assertEquals(1, errors.size());
         {
-            final IValidationError error = errors.get(0);
+            final IValidationError error = errors.getFirst();
             assertEquals(SeverityType.FATAL, error.getSeverity());
             assertEquals(5, error.getLineNumber());
             assertEquals(22, error.getColumnNumber());
@@ -69,7 +69,7 @@ public class InvoiceValidatorTest {
         List<? extends IValidationError> errors = VALIDATOR.validate(xmlFile);
         assertEquals(1, errors.size());
         {
-            final IValidationError error = errors.get(0);
+            final IValidationError error = errors.getFirst();
             assertEquals(SeverityType.FATAL, error.getSeverity());
             assertEquals(5, error.getLineNumber());
             assertEquals(21, error.getColumnNumber());
