@@ -52,7 +52,7 @@ public class ErrorSupportTest {
         assertNotNull(bean);
         assertEquals(2, errors.size());
         {
-            final SimpleErrorEntity error = errors.get(0);
+            final SimpleErrorEntity error = errors.getFirst();
             assertSame(row, error.getRecord());
             assertEquals(0, error.getOrder());
             assertEquals(0, error.getOffset());
@@ -87,7 +87,7 @@ public class ErrorSupportTest {
         assertNotNull(bean);
         assertEquals(2, errors.size());
         {
-            final SimpleErrorEntity error = errors.get(0);
+            final SimpleErrorEntity error = errors.getFirst();
             assertSame(row, error.getRecord());
             assertEquals(0, error.getOrder());
             assertEquals(0, error.getOffset());
@@ -122,7 +122,7 @@ public class ErrorSupportTest {
         assertNotNull(bean);
         assertEquals(2, errors.size());
         {
-            final SimpleErrorEntity error = errors.get(0);
+            final SimpleErrorEntity error = errors.getFirst();
             assertSame(row, error.getRecord());
             assertEquals(0, error.getOrder());
             assertEquals(0, error.getOffset());
@@ -157,7 +157,7 @@ public class ErrorSupportTest {
         assertNotNull(bean);
         assertEquals(2, errors.size());
         {
-            final SimpleErrorEntity error = errors.get(0);
+            final SimpleErrorEntity error = errors.getFirst();
             assertSame(row, error.getRecord());
             assertEquals(0, error.getOrder());
             assertEquals(0, error.getOffset());
@@ -192,7 +192,7 @@ public class ErrorSupportTest {
         assertNotNull(bean);
         assertEquals(3, errors.size());
         {
-            final SimpleErrorEntity error = errors.get(0);
+            final SimpleErrorEntity error = errors.getFirst();
             assertSame(row, error.getRecord());
             assertEquals(0, error.getOrder());
             assertEquals(0, error.getOffset());
@@ -237,7 +237,7 @@ public class ErrorSupportTest {
         assertNotNull(bean);
         assertEquals(2, errors.size());
         {
-            final SimpleErrorEntity error = errors.get(0);
+            final SimpleErrorEntity error = errors.getFirst();
             assertSame(row, error.getRecord());
             assertEquals(0, error.getOrder());
             assertEquals(0, error.getOffset());
@@ -273,7 +273,7 @@ public class ErrorSupportTest {
         errors.sort(Comparator.comparingInt(SimpleErrorEntity::getOffset));
         assertEquals(7, errors.size());
         {
-            final SimpleErrorEntity error = errors.get(0);
+            final SimpleErrorEntity error = errors.getFirst();
             assertSame(row, error.getRecord());
             assertNotNull(error.getOrder());
             assertEquals(0, error.getOffset());
@@ -359,7 +359,7 @@ public class ErrorSupportTest {
         assertNotNull(bean);
         assertEquals(3, errors.size());
         {
-            final SimpleErrorEntity error = errors.get(0);
+            final SimpleErrorEntity error = errors.getFirst();
             assertSame(row, error.getRecord());
             assertNotNull(error.getOrder());
             assertEquals(0, error.getOffset());
